update taskDF GB values

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -54,15 +54,15 @@ df40=2.14
 df45=2.14
 df50=2.2
 df55=2.2
-df60=2.2
-df65=2.2
-df70=2.2
-df75=2.2
-df80=2.2
-df85=2.2
-df90=2.2
-df95=2.2
-df100=2.2
+df60=2.2 # sometimes 1.48 GB
+df65=2.4
+df70=2.6 # sometimes 2.0
+df75=2.6
+df80=2.6
+df85=2.6
+df90=2.6
+df95=2.6
+df100=2.6
 
 
 #  Time interval in seconds (integer or float) to pause script.
