move var to .cfg

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -99,6 +99,6 @@ app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
 log_file=taskXDF.log
 
 
-# Name of the timer script. Don't change. Don't move from the parent folder for taskXDF.
+# Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
 timer_script="taskXDF-timer"
 
