add check for max tasks allowed; minor code improvement

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -13,7 +13,7 @@
 X1=1
 X2=2
 X3=3
-X4=4
+#X4=4
 #X5=5
 
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
@@ -86,7 +86,7 @@ sleep_t=10
 mod=5
 
 
-#  Full path to the app_config file to be edited.
+#  Full path to the app_config.xml file to be edited.
 
 app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
 
