make ttime_max a .cfg var

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -86,6 +86,12 @@ sleep_t=10
 mod=5
 
 
+#  Maximum time in seconds for a task to run before triggering a notice.
+#  Should account for your maximum task multiple and longest observed normalized single task time
+#     for your system.
+
+ttime_max=900
+
 #  Full path to the app_config.xml file to be edited.
 
 app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
