update .cfg file

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -19,14 +19,14 @@ X3=3
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
 #  Default value is 95. The suggested range is 90-98.
 
-vpct_max=94
+vpct_max=96
 
 #  Lower limit of VRAM% (integer) that triggers a script pause needed to update VRAM% readings.
 #  Recommended: use VRAM% required to run the lowest DF task (GB for DF 0.10 / GB card total)
-#  Suggested values: 13 for 4 GB card, 8 for 6 GB card, 6 for 8 GB card.
+#  Suggested values: 9 for 4 GB card, 7 for 6 GB card, 6 for 8 GB card.
 #  Adjust as needed to minimize unnecessary pauses. 
 
-vpct_min=8
+vpct_min=9
 
 #  Upper limit of a card's GTT% that triggers suspension of boinc project tasks 
 #    or a script pause needed to update GTT% readings.
@@ -35,12 +35,12 @@ vpct_min=8
 #  **Value (integer or float) depends on GPU VRAM memory -AND- total system memory.**
 #  Suggested values: between 2 and 6
 
-gpct_max=3
+gpct_max=4
 
 
 # Set variables for an associative array that pairs the full range of Spotlight task DFs 
 #   to their GB memory requirement.
-# GB values are from prior measurments of running tasks in the O2MDF Spotlight data series.
+# GB values are from prior measurements of running tasks in the O2MDF Spotlight data series.
 #   The default values here are upper limits observed.
 # Update GB values (integer or float) as needed. df10 refers to a DF of 0.10, and so on.
 
@@ -69,9 +69,9 @@ df100=2.6
 #  Time interval in seconds (integer or float) to pause script.
 #  Is sometimes used in script with a sleep_factor multiplier. Some default uses:
 #   As is or as ($sleep_t * 2) to suspend boinc in response to excessive GTT%.
-#   As ($sleep_t * 4) to await VRAM% to rise above set minimimum, vpct_min,
+#   As ($sleep_t * 4) to await VRAM% to rise above set minimum, vpct_min,
 #     following a boinc resumption or start of a new task.
-#   As (sleep_t * 6) after a task X change to let system equilbrate before next script cycle. 
+#   As (sleep_t * 6) after a task X change to let system equilibrate before next script cycle.
 #  Default is 10 sec. 
 
 sleep_t=10
