--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -86,9 +86,15 @@ sleep_t=10
 mod=5
 
 
-#  Maximum time in seconds for a task to run before triggering a notice.
-#  Should account for your maximum task multiple and longest observed normalized single task time
-#     for your system.
+#  Set to 'yes' if you want to activate automatic abort of a task is is taking too long to run.
+#  Default is 'no'.
+#  If set to 'yes', then set ttime_max to an appropriate "too long" time.
+
+auto_abort=no
+
+
+#  Maximum time in seconds for a task to run before triggering a notice (or abort, if activated) for a long-running task.
+#  Length should account for your maximum task multiple and longest observed normalized single task time for your system.
 
 ttime_max=900
 
