add monitor-only option to .cfg

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -3,6 +3,27 @@
 ## HEADS UP: Intended only for AMD cards. 
 ## Things will go wrong if NVIDIA or other cards are also active.
 
+# To run in monitor-only mode ()will not change taskX through app_config.xml) set to monitor_only=yes.
+#   Default is 'no'.
+monitor_only=no
+
+
+# Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
+timer_script="taskXDF-timer"
+
+
+#  Full path to the app_config.xml file to be edited.
+app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
+
+
+#  Full path to log. The log file provides data may help users optimize .cfg settings.
+#  Example log entry:
+#  Jul 28 05:06:07 .33 1.00 98 15.97 <tab> running:[.60 .60 .80 ] waiting:[na] ready:[.70 ] VRAM%+newX:134
+#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs], VRAM% if X incremented.
+
+log_file=taskXDF.log
+
+
 #  Four X variables, as concurrent task multiples, are used to assign gpu_usage factors in
 #    app_config.xml for the boinc-client. 
 #  Comment out the task factors you do not want to use. 
@@ -98,19 +119,4 @@ auto_abort=no
 
 ttime_max=900
 
-#  Full path to the app_config.xml file to be edited.
-
-app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
-
-
-#  Full path to log. The log file provides data may help users optimize .cfg settings.
-#  Example log entry: 
-#  Jul 28 05:06:07 .33 1.00 98 15.97 <tab> running:[.60 .60 .80 ] waiting:[na] ready:[.70 ] VRAM%+newX:134
-#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs], VRAM% if X incremented.
-
-log_file=taskXDF.log
-
-
-# Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
-timer_script="taskXDF-timer"
 
