disable auto-abort/warning option

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -111,7 +111,7 @@ mod=5
 #  Default is 'no'.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
 
-auto_abort=no
+#auto_abort=no
 
 
 #  Maximum time in seconds for a task to run before triggering a notice (or abort, if activated) for a long-running task.
