--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -3,27 +3,6 @@
 ## HEADS UP: Intended only for AMD cards. 
 ## Things will go wrong if NVIDIA or other cards are also active.
 
-# To run in monitor-only mode ()will not change taskX through app_config.xml) set to monitor_only=yes.
-#   Default is 'no'.
-monitor_only=no
-
-
-# Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
-timer_script="taskXDF-timer"
-
-
-#  Full path to the app_config.xml file to be edited.
-app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
-
-
-#  Full path to log. The log file provides data may help users optimize .cfg settings.
-#  Example log entry:
-#  Jul 28 05:06:07 .33 1.00 98 15.97 <tab> running:[.60 .60 .80 ] waiting:[na] ready:[.70 ] VRAM%+newX:134
-#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs], VRAM% if X incremented.
-
-log_file=taskXDF.log
-
-
 #  Four X variables, as concurrent task multiples, are used to assign gpu_usage factors in
 #    app_config.xml for the boinc-client. 
 #  Comment out the task factors you do not want to use. 
@@ -36,6 +15,16 @@ X2=2
 X3=3
 #X4=4
 #X5=5
+
+
+#  Modulo for number of minutes between status reports.
+#  mod value:  1   2	3	4	5	6	7	8	9   <- Use one of these values.
+#  n per hr:   60  30	20	15	12	10	8	7	6   <- Rate at which status logs are issued.
+#    This reporting rate assumes the .timer script is running on a 60 sec interval.
+#    Set mod to 1 to have a status report issued every time the main script is executed.
+
+mod=5
+
 
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
 #  Default value is 95. The suggested range is 90-98.
@@ -98,25 +87,41 @@ df100=2.6
 sleep_t=10
 
 
-#  Modulo for number of minutes between status reports.
-#  mod value:  1   2	3	4	5	6	7	8	9   <- Use one of these values.
-#  n per hr:   60  30	20	15	12	10	8	7	6   <- Rate at which status logs are issued.
-#    This reporting rate assumes the .timer script is running on a 60 sec interval.
-#    Set mod to 1 to have a status report issued every time the main script is executed.
-
-mod=5
-
-
 #  Set to 'yes' if you want to activate automatic abort of a task is is taking too long to run.
 #  Default is 'no'.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
 
-#auto_abort=no
+auto_abort=no
 
 
-#  Maximum time in seconds for a task to run before triggering a notice (or abort, if activated) for a long-running task.
-#  Length should account for your maximum task multiple and longest observed normalized single task time for your system.
+#  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
+#    (or auto-abort, if activated) for a long-running task.
+#  Length should account for your maximum task multiple times longest observed single task time for your system.
 
-ttime_max=900
+ttime_max=20
+
+
+# Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
+
+timer_script="taskXDF-timer"
+
+
+#  Full path to log. The log file provides data may help users optimize .cfg settings.
+#  Example log entry:
+#  Jul 28 05:06:07 .33 1.00 98 15.97 <tab> running:[.60 .60 .80 ] waiting:[na] ready:[.70 ] VRAM%+newX:134
+#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs], VRAM% if X incremented.
+
+log_file=taskXDF.log
+
+
+# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml.
+#   Default is 'no', thus allowing changes to taskX. Path to app_config.xml is set below.
+
+monitor_only=no
+
+
+#  Full path to the app_config.xml file to be edited.
+app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
+
 
 
