update for O3AS tasks; improve argument logic

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -12,7 +12,7 @@
 
 X1=1
 X2=2
-X3=3
+#X3=3
 #X4=4
 #X5=5
 
@@ -45,20 +45,20 @@ vpct_min=9
 #  **Value (integer or float) depends on GPU VRAM memory -AND- total system memory.**
 #  Suggested values: between 2 and 6
 
-gpct_max=4
+gpct_max=6
 
 
-# Set variables for an associative array that pairs the full range of Spotlight task DFs 
+# Set variables for an associative array that pairs the full range of task DFs
 #   to their GB memory requirement.
-# GB values are from prior measurements of running tasks in the O2MDF Spotlight data series.
+# GB values are from prior measurements of running tasks in the O3AS data series.
 #   The default values here are upper limits observed.
 # Update GB values (integer or float) as needed. df10 refers to a DF of 0.10, and so on.
 
-df10=.45
-df15=.45
-df20=.80
-df25=.80
-df30=.80
+df10=.5
+df15=.5
+df20=1.1
+df25=1.1
+df30=1.1
 df35=1.35
 df40=1.45
 df45=1.45
@@ -103,7 +103,7 @@ ttime_max=30
 
 # Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
 
-timer_script="taskXDF-timer"
+timer_script=taskXDF-timer
 
 
 #  Full path to log. The log file provides data may help users optimize .cfg settings.
