--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -91,7 +91,7 @@ sleep_t=10
 #  Default is 'no'.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
 
-auto_abort=no
+auto_suspend=yes
 
 
 #  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
