add to .cfg gravitywave task name tag

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -12,9 +12,15 @@
 
 X1=1
 X2=2
-#X3=3
+X3=3
 #X4=4
 #X5=5
+
+
+# Common tag to identify gravitational task names. Update as needed.
+# For example, as in: h1_0178.40_O3aM1In1__O3ASE1_178.50Hz_5182_1
+
+gravtask_tag=O3AS
 
 
 #  Modulo for number of minutes between status reports.
@@ -29,7 +35,7 @@ mod=5
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
 #  Default value is 95. The suggested range is 90-98.
 
-vpct_max=96
+vpct_max=97
 
 #  Lower limit of VRAM% (integer) that triggers a script pause needed to update VRAM% readings.
 #  Recommended: use VRAM% required to run the lowest DF task (GB for DF 0.10 / GB card total)
@@ -38,14 +44,15 @@ vpct_max=96
 
 vpct_min=9
 
+
 #  Upper limit of a card's GTT% that triggers suspension of boinc project tasks 
 #    or a script pause needed to update GTT% readings.
 #  Use a value, based on observations, under which GTT% doesn't rapidly increase
 #    once VRAM% usage nears its limit.
 #  **Value (integer or float) depends on GPU VRAM memory -AND- total system memory.**
-#  Suggested values: between 2 and 6
+#  Suggested values: between 2 and 8
 
-gpct_max=6
+gpct_max=8
 
 
 # Set variables for an associative array that pairs the full range of task DFs
