Add message when running monitor_only

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -124,7 +124,7 @@ log_file=taskXDF.log
 # Running in monitor-only mode, 'yes' will not change taskX through app_config.xml.
 #   Default is 'no', thus allowing changes to taskX. Path to app_config.xml is set below.
 
-monitor_only=no
+monitor_only=yes
 
 
 #  Full path to the app_config.xml file to be edited.
