Define font colors in .cfg

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -130,5 +130,13 @@ monitor_only=no
 #  Full path to the app_config.xml file to be edited.
 app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
 
+# These escape codes will work with all ANSI/VT100 terminals and terminal emulators.
+# Not for user configuration: Color terminal font used in timer and main script.
+# Blue and orange are for red-green color blind users.
+blue='\x1b[1;38;5;33m'
+orng='\x1b[0;38;5;202m'
+brn='\033[0;33m'
+nc='\033[0m'  # no color; reset color to default
+
 
 
