clarify comment for $mod

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -125,7 +125,7 @@ log_file=taskXDF.log
 #   Default is 'no', thus allowing changes to taskX. Path to app_config.xml is set below.
 
 monitor_only=no
-
+# monitor_only=yes
 
 #  Full path to the app_config.xml file to be edited.
 app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
