add notifications for no GW tasks available

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -102,10 +102,10 @@ auto_suspend=yes
 
 
 #  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
-#    (or auto-abort, if activated) for a long-running task.
+#    (or auto-suspend, if activated) for a long-running task.
 #  Length should account for your maximum task multiple times longest observed single task time for your system.
 
-ttime_max=30
+ttime_max=40
 
 
 # Name of the timer script. Don't change.  Don't move the timer script from the parent folder for taskXDF.
