clarify comments for auto-suspend and monitor-only

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -95,7 +95,7 @@ sleep_t=10
 
 
 #  Set to 'yes' if you want to activate automatic abort of a task is is taking too long to run.
-#  Default is 'no'.
+#  Default is 'no'. Auto-suspend will run in monitor-only mode.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
 
 auto_suspend=yes
@@ -121,7 +121,8 @@ timer_script=taskXDF-timer
 log_file=taskXDF.log
 
 
-# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml.
+# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml,
+#   but will run auto-suspend if set.
 #   Default is 'no', thus allowing changes to taskX. Path to app_config.xml is set below.
 
 monitor_only=no
