fix method for report intervals; debug DF reporting of non-GW tasks

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -26,11 +26,16 @@ gravtask_tag=O3AS
 #  Modulo for number of minutes between status reports.
 #  mod value:  1   2	3	4	5	6	7	8	9   <- Use one of these values.
 #  n per hr:   60  30	20	15	12	10	8	7	6   <- Rate at which status logs are issued.
-#    This reporting rate assumes the .timer script is running on a 60 sec interval.
+#    ...assuming the .timer script is running on a 60 sec interval.
 #    Set mod to 1 to have a status report issued every time the main script is executed.
 
-mod=5
+#mod=5
 
+
+#  Report interval will issue a current status report every n script cycles.
+#  Default is 5.
+
+report_int=5
 
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
 #  Default value is 95. The suggested range is 90-98.
