fix AMDGPU bug in measuring GTT%; simplify reporting of non-GW tasks;

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -18,9 +18,9 @@ X3=3
 
 
 # Common tag to identify gravitational task names. Update as needed.
-# For example, as in: h1_0178.40_O3aM1In1__O3ASE1_178.50Hz_5182_1
+# For example, as in: h1_0178.40_O3aM1In1__O3AS1_178.50Hz_5182_1
 
-gravtask_tag=O3AS
+gravtask_tag=h1_
 
 
 #  Modulo for number of minutes between status reports.
@@ -34,6 +34,9 @@ gravtask_tag=O3AS
 
 #  Report interval will issue a current status report every n script cycles.
 #  Default is 5.
+#  NOTE: if value is changed while -timer script is running, then the -timer script needs to
+#    restart to display the new value in the recurring reminder, however,
+#    the new report interval will take effect without a -timer restart.
 
 report_int=5
 
