change gpu_usage in app_config only for assigned GW app

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -17,19 +17,14 @@ X3=3
 #X5=5
 
 
-# Common tag to identify gravitational task names. Update as needed.
-# For example, as in: h1_0178.40_O3aM1In1__O3AS1_178.50Hz_5182_1
+#  Common tag to identify gravitational GPU task names. Update as needed.
+#  For example, as in: h1_0178.40_O3aM1In1__O3AS1_178.50Hz_5182_1
 
 gravtask_tag=h1_
 
+#  Name of current gravitational wave GPU app. Update as needed.
 
-#  Modulo for number of minutes between status reports.
-#  mod value:  1   2	3	4	5	6	7	8	9   <- Use one of these values.
-#  n per hr:   60  30	20	15	12	10	8	7	6   <- Rate at which status logs are issued.
-#    ...assuming the .timer script is running on a 60 sec interval.
-#    Set mod to 1 to have a status report issued every time the main script is executed.
-
-#mod=5
+gravapp=einstein_O3AS
 
 
 #  Report interval will issue a current status report every n script cycles.
