fix typo in perl statement; clarify comments

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -3,6 +3,13 @@
 ## HEADS UP: Intended only for AMD cards. 
 ## Things will go wrong if NVIDIA or other cards are also active.
 
+# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml,
+#   but will run auto-suspend if set. Path to app_config.xml is set below.
+#   Default is 'no', thus allowing changes to taskX.
+
+monitor_only=no
+# monitor_only=yes
+
 #  Four X variables, as concurrent task multiples, are used to assign gpu_usage factors in
 #    app_config.xml for the boinc-client. 
 #  Comment out the task factors you do not want to use. 
@@ -22,7 +29,8 @@ X3=3
 
 gravtask_tag=h1_
 
-#  Name of current gravitational wave GPU app. Update as needed.
+
+#  Name (<name>...</name>) of current gravitational wave GPU app use in app_config.xml. Update as needed.
 
 gravapp=einstein_O3AS
 
@@ -85,7 +93,6 @@ df95=2.6
 df100=2.6
 
 
-
 #  Time interval in seconds (integer or float) to pause script.
 #  Is sometimes used in script with a sleep_factor multiplier. Some default uses:
 #   As is or as ($sleep_t * 2) to suspend boinc in response to excessive GTT%.
@@ -98,11 +105,12 @@ sleep_t=10
 
 
 #  Set to 'yes' if you want to activate automatic abort of a task is is taking too long to run.
-#  Default is 'no'. Auto-suspend will run in monitor-only mode.
+#  Set to 'no' to manually monitor "stuck" tasks.
+#  Default is 'yes'. Auto-suspend 'yes' will also run in monitor-only mode.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
 
 auto_suspend=yes
-
+; auto_suspend=no
 
 #  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
 #    (or auto-suspend, if activated) for a long-running task.
@@ -124,19 +132,12 @@ timer_script=taskXDF-timer
 log_file=taskXDF.log
 
 
-# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml,
-#   but will run auto-suspend if set.
-#   Default is 'no', thus allowing changes to taskX. Path to app_config.xml is set below.
-
-monitor_only=no
-# monitor_only=yes
-
 #  Full path to the app_config.xml file to be edited.
 app_path=/var/lib/boinc-client/projects/einstein.phys.uwm.edu/app_config.xml
 
 # These escape codes will work with all ANSI/VT100 terminals and terminal emulators.
-# Not for user configuration: Color terminal font used in timer and main script.
-# Blue and orange are for red-green color blind users.
+# Not intended for user configuration: variables are used in both the timer and main scripts.
+# Blue and orange are used for red-green color blind users.
 blue='\x1b[1;38;5;33m'
 orng='\x1b[0;38;5;202m'
 brn='\033[0;33m'
