fix typo in .cfg file; clarify comments

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -3,9 +3,9 @@
 ## HEADS UP: Intended only for AMD cards. 
 ## Things will go wrong if NVIDIA or other cards are also active.
 
-# Running in monitor-only mode, 'yes' will not change taskX through app_config.xml,
-#   but will run auto-suspend if set. Path to app_config.xml is set below.
-#   Default is 'no', thus allowing changes to taskX.
+#  Running in monitor-only mode, 'yes' will not change taskX through app_config.xml,
+#    but will run auto-suspend if set. Path to app_config.xml is set below.
+#  Default is 'no', thus allowing changes to taskX.
 
 monitor_only=no
 # monitor_only=yes
@@ -30,7 +30,8 @@ X3=3
 gravtask_tag=h1_
 
 
-#  Name (<name>...</name>) of current gravitational wave GPU app use in app_config.xml. Update as needed.
+#  Name of current gravitational wave GPU app use in app_config.xml (<name>...</name>).
+#  User should update as needed.
 
 gravapp=einstein_O3AS
 
@@ -44,7 +45,7 @@ gravapp=einstein_O3AS
 report_int=5
 
 #  Upper limit of GPU card's VRAM% (integer) to trigger decrementing the task multiple.
-#  Default value is 95. The suggested range is 90-98.
+#  Default value is 97. The suggested range is 90-98.
 
 vpct_max=97
 
@@ -60,7 +61,7 @@ vpct_min=9
 #    or a script pause needed to update GTT% readings.
 #  Use a value, based on observations, under which GTT% doesn't rapidly increase
 #    once VRAM% usage nears its limit.
-#  **Value (integer or float) depends on GPU VRAM memory -AND- total system memory.**
+#  NOTE: Value (integer or float) depends on GPU VRAM memory -AND- total system memory.
 #  Suggested values: between 2 and 8
 
 gpct_max=8
@@ -99,18 +100,18 @@ df100=2.6
 #   As ($sleep_t * 4) to await VRAM% to rise above set minimum, vpct_min,
 #     following a boinc resumption or start of a new task.
 #   As (sleep_t * 6) after a task X change to let system equilibrate before next script cycle.
-#  Default is 10 sec. 
+#  Default value is 10.
 
 sleep_t=10
 
 
 #  Set to 'yes' if you want to activate automatic abort of a task is is taking too long to run.
 #  Set to 'no' to manually monitor "stuck" tasks.
-#  Default is 'yes'. Auto-suspend 'yes' will also run in monitor-only mode.
 #  If set to 'yes', then set ttime_max to an appropriate "too long" time.
+#  Default is 'yes'. Auto-suspend 'yes' is active regardless of monitor-only status.
 
 auto_suspend=yes
-; auto_suspend=no
+# auto_suspend=no
 
 #  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
 #    (or auto-suspend, if activated) for a long-running task.
@@ -127,7 +128,7 @@ timer_script=taskXDF-timer
 #  Full path to log. The log file provides data may help users optimize .cfg settings.
 #  Example log entry:
 #  Jul 28 05:06:07 .33 1.00 98 15.97 <tab> running:[.60 .60 .80 ] waiting:[na] ready:[.70 ] VRAM%+newX:134
-#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs], VRAM% if X incremented.
+#  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs].
 
 log_file=taskXDF.log
 
