Add option for more comprehensive data logging.

--- a/taskXDF.cfg
+++ b/taskXDF.cfg
@@ -10,6 +10,7 @@
 monitor_only=no
 # monitor_only=yes
 
+
 #  Four X variables, as concurrent task multiples, are used to assign gpu_usage factors in
 #    app_config.xml for the boinc-client. 
 #  Comment out the task factors you do not want to use. 
@@ -39,8 +40,10 @@ gravapp=einstein_O3AS
 #  Report interval will issue a current status report every n script cycles.
 #  Default is 5.
 #  NOTE: if value is changed while -timer script is running, then the -timer script needs to
-#    restart to display the new value in the recurring reminder, however,
+#    restart to display the new value in the recurring reminder; however,
 #    the new report interval will take effect without a -timer restart.
+#  TIP: Run the -timer script on a timed interval of 60 s and control Terminal reporting output here.
+#       Higher report_int cycles provide less frequent Terminal reporting.
 
 report_int=5
 
@@ -114,8 +117,8 @@ auto_suspend=yes
 # auto_suspend=no
 
 #  Maximum time, in whole non-zero minutes (no decimals), for a task to run before triggering a notice
-#    (or auto-suspend, if activated) for a long-running task.
-#  Length should account for your maximum task multiple times longest observed single task time for your system.
+#    (or auto-suspend, if activated) for a long-running task. Transiently suspending a 'stuck' task can
+#    sometimes prompt its successful completion; this is what the auto_suspend function does.
 
 ttime_max=40
 
@@ -131,6 +134,11 @@ timer_script=taskXDF-timer
 #  month, date, time, initial gpu_usage, final gpu_usage, VRAM%, GTT%, [running DFs], [waiting DFs], [ready DFs].
 
 log_file=taskXDF.log
+
+#  For comprehensive reporting of all timed interval data to the .log file, set to 'yes' (default).
+#  Set to 'no' to report status data only on each report_interval.
+log_all=yes
+#log_all=no
 
 
 #  Full path to the app_config.xml file to be edited.
